# caesar_chip_encryption

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  main.cpp  test_szyfr.txt
decrypted/decrypted_10/: hex_unique_key_10.txt
decrypted/decrypted_11/: hex_unique_key_11.txt
decrypted/decrypted_12/: hex_unique_key_12.txt
decrypted/decrypted_13/: hex_unique_key_13.txt
decrypted/decrypted_14/: hex_unique_key_14.txt
decrypted/decrypted_15/: hex_unique_key_15.txt
decrypted/decrypted_16/: hex_unique_key_16.txt
decrypted/decrypted_5/: hex_unique_key_5.txt
decrypted/decrypted_6/: hex_unique_key_6.txt
decrypted/decrypted_7/: hex_unique_key_7.txt
decrypted/decrypted_8/: hex_unique_key_8.txt
decrypted/decrypted_9/: hex_unique_key_9.txt
encrypted/encrypted_1/: char_unique_key_1.txt  hex_unique_key_1.txt
encrypted/encrypted_10/: hex_unique_key_10.txt
encrypted/encrypted_13/: hex_unique_key_13.txt
encrypted/encrypted_15/: hex_unique_key_15.txt
encrypted/encrypted_17/: hex_unique_key_17.txt
encrypted/encrypted_19/: hex_unique_key_19.txt
encrypted/encrypted_2/: char_unique_key_2.txt  hex_unique_key_2.txt
encrypted/encrypted_20/: hex_unique_key_20.txt
encrypted/encrypted_21/: hex_unique_key_21.txt
encrypted/encrypted_22/: hex_unique_key_22.txt
encrypted/encrypted_23/: hex_unique_key_23.txt
encrypted/encrypted_28/: hex_unique_key_28.txt
encrypted/encrypted_34/: hex_unique_key_34.txt
encrypted/encrypted_38/: hex_unique_key_38.txt
encrypted/encrypted_5/: hex_unique_key_5.txt
encrypted/encrypted_9/: hex_unique_key_9.txt
encryption/encryption/: encryption.cpp  encryption.hpp  keygenerator.cpp  keygenerator.hpp
encryption/io/: file.cpp  file.hpp  (+2 more)
(+7 files in other folders)
